2008-01-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Remove the pw_name argument of new_pw_passwd. Use
	the user_newname global variable instead. This avoid using a
	parameter with the same name as a function.

2008-01-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newgrp.c: Removed unused gid parameter of syslog_sg().
	* src/newgrp.c: The loginname and tty buffers are never changed.
	Add the const qualifier.

2008-01-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chpasswd.c, src/chgpasswd.c: The crypt_method string always
	points to a constant string. Add the const qualifier.

2008-01-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwunconv.c: Remove prototype of l64a() (not used in
	pwunconv).

2008-01-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login_nopam.c: Use an ANSI prototype for resolve_hostname()
	instead of K&R prototype.
	* src/login_nopam.c: Fix the prototypes of list_match(),
	user_match(), from_match(), string_match(). There were no
	parameters in the prototypes.
	* src/login_nopam.c: Fix the prototypes of the function parameter
	match_fn of list_match().

2008-01-06  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/copydir.c: Remove the src parameter of copy_special().
	The entry's information are taken from the stat structure.

2008-01-06  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/console.c, libmisc/ulimit.c, lib/sgetgrent.c,
	lib/sgetpwent.c: Include "prototypes.h" to make
	sure the exported prototypes are the ones used for the definition
	of functions.
	* lib/prototypes.h: Added prototypes for __gr_del_entry(),
	__gr_get_db(), __gr_get_head(), __gr_set_changed(), __gr_dup(),
	__pw_del_entry(), __pw_get_db(), __pw_get_head(), __pw_dup(),
	sgetgrent(), sgetpwent(), __sgr_del_entry(), __sgr_dup(),
	__sgr_get_head(), __sgr_set_changed(), __spw_get_head(),
	__spw_del_entry(), __spw_dup().