@@ -1,5 +1,10 @@
 2008-01-06  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* src/useradd.c, src/groupmems.c: Assume optarg and optind are
+	declared in <getopt.h>.
+
+2008-01-06  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* src/usermod.c: Remove the pw_name argument of new_pw_passwd. Use
 	the user_newname global variable instead. This avoid using a
 	parameter with the same name as a function.
